--- a/winequality/winequality.ipynb
+++ b/winequality/winequality.ipynb
@@ -592,6 +592,127 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fixed acidity</th>\n",
+       "      <th>alcohol</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>660</th>\n",
+       "      <td>7.2</td>\n",
+       "      <td>9.60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>6.9</td>\n",
+       "      <td>9.40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1076</th>\n",
+       "      <td>9.9</td>\n",
+       "      <td>11.40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1046</th>\n",
+       "      <td>7.6</td>\n",
+       "      <td>10.70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1555</th>\n",
+       "      <td>7.0</td>\n",
+       "      <td>10.55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>896</th>\n",
+       "      <td>8.3</td>\n",
+       "      <td>12.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1401</th>\n",
+       "      <td>7.9</td>\n",
+       "      <td>9.90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1246</th>\n",
+       "      <td>7.4</td>\n",
+       "      <td>10.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1125</th>\n",
+       "      <td>8.8</td>\n",
+       "      <td>11.30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>390</th>\n",
+       "      <td>5.6</td>\n",
+       "      <td>12.90</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>160 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      fixed acidity  alcohol\n",
+       "660             7.2     9.60\n",
+       "33              6.9     9.40\n",
+       "1076            9.9    11.40\n",
+       "1046            7.6    10.70\n",
+       "1555            7.0    10.55\n",
+       "...             ...      ...\n",
+       "896             8.3    12.50\n",
+       "1401            7.9     9.90\n",
+       "1246            7.4    10.00\n",
+       "1125            8.8    11.30\n",
+       "390             5.6    12.90\n",
+       "\n",
+       "[160 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for i in range(len(column_combinations[:10])):\n",
+    "        x = dataset[['fixed acidity','alcohol']]\n",
+    "        y = dataset['quality']\n",
+    "        x_tr, x_te, y_tr, y_te = sklearn.model_selection.train_test_split(x,y,test_size=0.10)\n",
+    "x_te"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -600,54 +721,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "train_model() missing 1 required positional argument: 'num'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_26000\\929701343.py\u001b[0m in \u001b[0;36m<cell line: 32>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     30\u001b[0m                 \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbest\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     31\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 32\u001b[1;33m \u001b[0mtrain_model\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: train_model() missing 1 required positional argument: 'num'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['fixed acidity', 'volatile acidity', 'citric acid', 'residual sugar', 'chlorides', 'free sulfur dioxide', 'total sulfur dioxide', 'density', 'pH', 'sulphates', 'alcohol']\n",
+      "2047\n",
+      "0.525\n",
+      "0.5375\n",
+      "0.55\n",
+      "0.575\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'complete'"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "from sklearn.tree import DecisionTreeClassifier\n",
     "\n",
     "## Loop model\n",
-    "def train_model(algorithm: str, num: int):\n",
+    "def train_model(algorithm: str, num: int, data: pd.DataFrame):\n",
     "\n",
-    "    ## Set \n",
-    "    model = None\n",
-    "    ## Load in previous model if available\n",
-    "    try:\n",
-    "        pickle_in = open(f\"{algorithm}_model.pickle\", \"rb\")\n",
-    "        model = pickle.load(pickle_in)\n",
+    "    ## Define global variable to access outside of function\n",
+    "    global best_arrays\n",
     "\n",
-    "    except:\n",
-    "        if model == None:\n",
-    "            best = 0\n",
-    "            \n",
-    "        else:\n",
-    "            best = model.score(x_test, y_test)\n",
+    "    ## Generate all column combinations using itertools\n",
+    "    column_combinations = []\n",
+    "    col_of_interest = list(data.columns.drop(\"quality\"))\n",
+    "    print(col_of_interest)\n",
     "\n",
-    "        ## Loop to try for best score on model\n",
+    "    for i in range(1,len(col_of_interest)+1):\n",
+    "        column_combinations += list(combinations(col_of_interest, i))\n",
+    "\n",
+    "    print(len(column_combinations))\n",
+    "    \n",
+    "    ## Split data into train and test sets for each column combination\n",
+    "    \n",
+    "    for j in range(len(column_combinations[50:60])):\n",
     "        for i in range(num):\n",
-    "            model = eval(algorithm + '()')\n",
-    "            model.fit(x_train, y_train)\n",
-    "            acc = model.score(x_test, y_test)\n",
+    "            ## Load in previous model if available\n",
+    "            try: #### (!)issue here is that everytime it loads the saved pickle, the best is error because the training and test sets have different number of columns\n",
+    "                pickle_in = open(f\"{algorithm.split('(')[0]}_model.pickle\", \"rb\")\n",
+    "                model = pickle.load(pickle_in)\n",
+    "                best = model.score(best_arrays[1], best_arrays[3])\n",
+    "\n",
+    "            except:\n",
+    "                best = 0\n",
+    "    \n",
+    "        \n",
+    "            x = data[list(column_combinations[j])]\n",
+    "            y = data.iloc[:, -1]\n",
+    "            x_tr, x_te, y_tr, y_te = sklearn.model_selection.train_test_split(x,y,test_size=0.10)\n",
+    "\n",
+    "\n",
+    "            ## Loop to try for best score on model\n",
+    "            model = eval(algorithm)\n",
+    "            model.fit(x_tr, y_tr)\n",
+    "            acc = model.score(x_te, y_te)\n",
     "\n",
     "            if acc > best:\n",
+    "                best_arrays = [x_tr,x_te,y_tr,y_te]\n",
     "                best = acc\n",
-    "                with open(f\"{algorithm}_model.pickle\", \"wb\") as f:\n",
+    "                with open(f\"{algorithm.split('(')[0]}_model.pickle\", \"wb\") as f:\n",
     "                    pickle.dump(model, f)\n",
     "                print(best)\n",
+    "    return 'complete'\n",
     "\n",
-    "train_model(DecisionTreeClassifier(),10)"
+    "train_model('DecisionTreeClassifier()',10, dataset)"
    ]
   },
   {
@@ -659,25 +810,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.70625"
+       "0.575"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pickle_in = open(\"dtree_model.pickle\", \"rb\")\n",
+    "pickle_in = open(\"DecisionTreeClassifier_model.pickle\", \"rb\")\n",
     "dtree = pickle.load(pickle_in)\n",
-    "dtree_predictions = dtree.predict(x_test)\n",
-    "dtree.score(x_test,y_test)"
+    "dtree_predictions = dtree.predict(best_arrays[1])\n",
+    "dtree.score(best_arrays[1], best_arrays[3])"
    ]
   },
   {
