--- a/grad_descent/gradientdescent_ml.ipynb
+++ b/grad_descent/gradientdescent_ml.ipynb
@@ -166,8 +166,7 @@
     "mse = Function('mse') (b,m)\n",
     "mse = (y_i - (m * x + b))**2\n",
     "print(f\"Partial Derivatives of mse:\")\n",
-    "Derivative(mse, m), Derivative(mse, b)\n",
-    "\n"
+    "Derivative(mse, m), Derivative(mse, b)\n"
    ]
   },
   {
@@ -234,7 +233,7 @@
    "source": [
     "# Stochastic Gradient Descent\n",
     "print(\"Learning rate:\")\n",
-    "Derivative(mse, m) * alpha\n"
+    "Derivative(mse, m) * alpha"
    ]
   },
   {
