--- a/personal_finance/investment_dashboard.ipynb
+++ b/personal_finance/investment_dashboard.ipynb
@@ -94,11 +94,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "possible_statements = ['income-statement','balance-sheet-statement','cash-flow-statement']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'income' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_28912\\2887871418.py\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mexec\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"{possible_statements[0]}.split('-')\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<string>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'income' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "exec(f\"{possible_statements[0]}.split('-')\")"
    ]
   },
   {
@@ -227,87 +249,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'2017-12-31': 7.02, '2018-12-31': 7.7, '2019-12-31': 11.58, '2020-12-31': -25.3, '2021-12-31': -6.1}\n"
+      "[{'2017': 37736000000, '2018': 41303000000, '2019': 43259000000, '2020': 15355000000, '2021': 24634000000}, {'2017': 37736000000, '2018': 41303000000, '2019': 43259000000, '2020': 15355000000, '2021': 24634000000}, {'2017': 37736000000, '2018': 41303000000, '2019': 43259000000, '2020': 15355000000, '2021': 24634000000}]\n"
      ]
     },
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>epsdiluted</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2017-12-31</th>\n",
-       "      <td>7.02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2018-12-31</th>\n",
-       "      <td>7.70</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019-12-31</th>\n",
-       "      <td>11.58</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020-12-31</th>\n",
-       "      <td>-25.30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021-12-31</th>\n",
-       "      <td>-6.10</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            epsdiluted\n",
-       "2017-12-31        7.02\n",
-       "2018-12-31        7.70\n",
-       "2019-12-31       11.58\n",
-       "2020-12-31      -25.30\n",
-       "2021-12-31       -6.10"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "from_records() got an unexpected keyword argument 'orient'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_57872\\241793108.py\u001b[0m in \u001b[0;36m<cell line: 11>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ml\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m \u001b[0meps_df\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfrom_records\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ml\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0morient\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'index'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'epsdiluted'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     12\u001b[0m \u001b[0meps_df\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: from_records() got an unexpected keyword argument 'orient'"
+     ]
     }
    ],
    "source": [
-    "eps_dict = []\n",
-    "for i in d[::-1]:\n",
-    "    eps_dict[i][i['date']] = i['epsdiluted']\n",
+    "l = []\n",
+    "dict_holder = {}\n",
+    "for n in ['epsdiluted','netIncome','revenue']:\n",
+    "    for i,x in enumerate(d[::-1]):\n",
+    "        dict_holder[x['calendarYear']] = x[f'{n}']\n",
+    "    l.append(dict_holder)\n",
     "\n",
-    "print(eps_dict)\n",
     "\n",
-    "eps_df = pd.DataFrame.from_records(eps_dict, orient='index', columns=['epsdiluted'])\n",
+    "print(l)\n",
+    "\n",
+    "eps_df = pd.DataFrame.from_records(l, orient='index', columns=['epsdiluted'])\n",
     "eps_df"
    ]
   },
