--- a/personal_finance/investment_dashboard.ipynb
+++ b/personal_finance/investment_dashboard.ipynb
@@ -145,15 +145,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'2017': 37736000000, '2018': 41303000000, '2019': 43259000000, '2020': 15355000000, '2021': 24634000000}, {'2017': 37736000000, '2018': 41303000000, '2019': 43259000000, '2020': 15355000000, '2021': 24634000000}, {'2017': 37736000000, '2018': 41303000000, '2019': 43259000000, '2020': 15355000000, '2021': 24634000000}, {'2017': 37736000000, '2018': 41303000000, '2019': 43259000000, '2020': 15355000000, '2021': 24634000000}, {'2017': 37736000000, '2018': 41303000000, '2019': 43259000000, '2020': 15355000000, '2021': 24634000000}, {'2017': 37736000000, '2018': 41303000000, '2019': 43259000000, '2020': 15355000000, '2021': 24634000000}, {'2017': 37736000000, '2018': 41303000000, '2019': 43259000000, '2020': 15355000000, '2021': 24634000000}, {'2017': 37736000000, '2018': 41303000000, '2019': 43259000000, '2020': 15355000000, '2021': 24634000000}, {'2017': 37736000000, '2018': 41303000000, '2019': 43259000000, '2020': 15355000000, '2021': 24634000000}, {'2017': 37736000000, '2018': 41303000000, '2019': 43259000000, '2020': 15355000000, '2021': 24634000000}, {'2017': 37736000000, '2018': 41303000000, '2019': 43259000000, '2020': 15355000000, '2021': 24634000000}, {'2017': 37736000000, '2018': 41303000000, '2019': 43259000000, '2020': 15355000000, '2021': 24634000000}, {'2017': 37736000000, '2018': 41303000000, '2019': 43259000000, '2020': 15355000000, '2021': 24634000000}, {'2017': 37736000000, '2018': 41303000000, '2019': 43259000000, '2020': 15355000000, '2021': 24634000000}, {'2017': 37736000000, '2018': 41303000000, '2019': 43259000000, '2020': 15355000000, '2021': 24634000000}]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[{'2017': 7.02, '2018': 7.7, '2019': 11.58, '2020': -25.3, '2021': -6.1},\n",
+       " {'2017': 2131000000,\n",
+       "  '2018': 2129000000,\n",
+       "  '2019': 3009000000,\n",
+       "  '2020': -7069000000,\n",
+       "  '2021': -1964000000},\n",
+       " {'2017': 37736000000,\n",
+       "  '2018': 41303000000,\n",
+       "  '2019': 43259000000,\n",
+       "  '2020': 15355000000,\n",
+       "  '2021': 24634000000}]"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -166,13 +179,13 @@
     "    for i,x in enumerate(d[::-1]):\n",
     "        dict_holder[x['calendarYear']] = x[f'{n}']\n",
     "    l.append(dict_holder)\n",
-    "\n",
-    "print(l)"
+    "    dict_holder = {}\n",
+    "l"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -204,48 +217,48 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2017</th>\n",
-       "      <td>37736000000</td>\n",
-       "      <td>37736000000</td>\n",
-       "      <td>37736000000</td>\n",
+       "      <td>7.02</td>\n",
+       "      <td>2.131000e+09</td>\n",
+       "      <td>3.773600e+10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2018</th>\n",
-       "      <td>41303000000</td>\n",
-       "      <td>41303000000</td>\n",
-       "      <td>41303000000</td>\n",
+       "      <td>7.70</td>\n",
+       "      <td>2.129000e+09</td>\n",
+       "      <td>4.130300e+10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2019</th>\n",
-       "      <td>43259000000</td>\n",
-       "      <td>43259000000</td>\n",
-       "      <td>43259000000</td>\n",
+       "      <td>11.58</td>\n",
+       "      <td>3.009000e+09</td>\n",
+       "      <td>4.325900e+10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2020</th>\n",
-       "      <td>15355000000</td>\n",
-       "      <td>15355000000</td>\n",
-       "      <td>15355000000</td>\n",
+       "      <td>-25.30</td>\n",
+       "      <td>-7.069000e+09</td>\n",
+       "      <td>1.535500e+10</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2021</th>\n",
-       "      <td>24634000000</td>\n",
-       "      <td>24634000000</td>\n",
-       "      <td>24634000000</td>\n",
+       "      <td>-6.10</td>\n",
+       "      <td>-1.964000e+09</td>\n",
+       "      <td>2.463400e+10</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       epsdiluted    netIncome      revenue\n",
-       "2017  37736000000  37736000000  37736000000\n",
-       "2018  41303000000  41303000000  41303000000\n",
-       "2019  43259000000  43259000000  43259000000\n",
-       "2020  15355000000  15355000000  15355000000\n",
-       "2021  24634000000  24634000000  24634000000"
+       "      epsdiluted     netIncome       revenue\n",
+       "2017        7.02  2.131000e+09  3.773600e+10\n",
+       "2018        7.70  2.129000e+09  4.130300e+10\n",
+       "2019       11.58  3.009000e+09  4.325900e+10\n",
+       "2020      -25.30 -7.069000e+09  1.535500e+10\n",
+       "2021       -6.10 -1.964000e+09  2.463400e+10"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,6 +267,240 @@
     "eps_df = pd.DataFrame.from_records(l, index=['epsdiluted','netIncome','revenue']).T\n",
     "eps_df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "terms_interested = {'revenue': 'revenue',\n",
+    "                    'gross margin%': 'grossProfitRatio',\n",
+    "                    'Operating Income': 'operatingIncome',\n",
+    "                    'Operating Margin %': 'operatingIncomeRatio',\n",
+    "                    'Net Income': 'netIncome',\n",
+    "                    'Net Income Margin': 'netIncomeRatio',\n",
+    "                    'Earnings per Share': 'epsdiluted',\n",
+    "                    'Shares Oustanding (diluted)': 'weightedAverageShsOutDil'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "revenue\n",
+      "grossProfitRatio\n",
+      "operatingIncome\n",
+      "operatingIncomeRatio\n",
+      "netIncome\n",
+      "netIncomeRatio\n",
+      "epsdiluted\n",
+      "weightedAverageShsOutDil\n"
+     ]
+    }
+   ],
+   "source": [
+    "items_interested = terms_interested.values()\n",
+    "\n",
+    "for items in items_interested:\n",
+    "    print(items)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['revenue',\n",
+       " 'grossProfitRatio',\n",
+       " 'operatingIncome',\n",
+       " 'operatingIncomeRatio',\n",
+       " 'netIncome',\n",
+       " 'netIncomeRatio',\n",
+       " 'epsdiluted',\n",
+       " 'weightedAverageShsOutDil']"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[items for items in items_interested if items in d[0].keys()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['c_0_1', 'c_0_2', 'c_1_1', 'c_1_2', 'c_1_3']"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arrangement = (2,3)\n",
+    "column_names = []\n",
+    "\n",
+    "for i,nrow in enumerate(arrangement):\n",
+    "    for ncolumn in range(1,nrow+1):\n",
+    "        column_names.append(f'c_{i}_{ncolumn}')\n",
+    "\n",
+    "column_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['2017', '2018', '2019', '2020', '2021'], dtype='object')"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eps_df.index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>epsdiluted</th>\n",
+       "      <th>netIncome</th>\n",
+       "      <th>revenue</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2017</th>\n",
+       "      <td>7.02</td>\n",
+       "      <td>2.131000e+09</td>\n",
+       "      <td>3.773600e+10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018</th>\n",
+       "      <td>7.70</td>\n",
+       "      <td>2.129000e+09</td>\n",
+       "      <td>4.130300e+10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019</th>\n",
+       "      <td>11.58</td>\n",
+       "      <td>3.009000e+09</td>\n",
+       "      <td>4.325900e+10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020</th>\n",
+       "      <td>-25.30</td>\n",
+       "      <td>-7.069000e+09</td>\n",
+       "      <td>1.535500e+10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021</th>\n",
+       "      <td>-6.10</td>\n",
+       "      <td>-1.964000e+09</td>\n",
+       "      <td>2.463400e+10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      epsdiluted     netIncome       revenue\n",
+       "2017        7.02  2.131000e+09  3.773600e+10\n",
+       "2018        7.70  2.129000e+09  4.130300e+10\n",
+       "2019       11.58  3.009000e+09  4.325900e+10\n",
+       "2020      -25.30 -7.069000e+09  1.535500e+10\n",
+       "2021       -6.10 -1.964000e+09  2.463400e+10"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eps_df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2017        NaN\n",
+       "2018      9.69%\n",
+       "2019     50.39%\n",
+       "2020   -318.48%\n",
+       "2021    -75.89%\n",
+       "Name: epsdiluted, dtype: float64"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.options.display.float_format = '{:.2%}'.format\n",
+    "eps_df['epsdiluted'].pct_change(periods=1).fillna(0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
