--- a/personal_finance/investment_dashboard.ipynb
+++ b/personal_finance/investment_dashboard.ipynb
@@ -875,7 +875,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('DataScience')",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -889,12 +889,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.3 (tags/v3.8.3:6f8c832, May 13 2020, 22:37:02) [MSC v.1924 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "15c829b79a9c192d7731c00829287f4b3b1aa9f9a3890f935442b2f4d956bef3"
+    "hash": "64bcc15f94cc501a51ee25093d530db16b814386d08ce749cc1f6f379d9ac3e5"
    }
   }
  },
