--- a/personal_finance/investment_dashboard.ipynb
+++ b/personal_finance/investment_dashboard.ipynb
@@ -578,7 +578,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pymongo import MongoClient,ASCENDING, DESCENDING\n",
+    "from bson.objectid import ObjectId\n",
+    "\n",
+    "\n",
+    "with open('D:\\lianz\\Desktop\\Python\\personal_projects\\personal_finance\\mongodb_api.txt','r') as f:\n",
+    "    cluster = f.readlines()[0]\n",
+    "    \n",
+    "client = MongoClient(cluster)\n",
+    "\n",
+    "# print(client.list_database_names())\n",
+    "\n",
+    "db = client.FinanceApp\n",
+    "\n",
+    "balance_sheet_collection = db.balance_sheet\n",
+    "income_collection = db.income_statement\n",
+    "cash_collection = db.cash_flow_statement\n",
+    "company_collection = db.company_profile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,21 +634,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "def read_statement(filepath, mode: list(['r','w','r+','w+'])):\n",
-    "    with open(filepath, f'{mode}') as f:\n",
-    "        statement = json.load(f)\n",
+    "def read_statement(collection, ticker):\n",
+    "    \n",
+    "        statement = [i for i in collection.find({'symbol':ticker}).sort('date', DESCENDING)]\n",
     "\n",
     "        return statement"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,7 +664,7 @@
     "                    'Operating Cash Flow': 'operatingCashFlow',\n",
     "                    'Cap Spending': 'capitalExpenditure',\n",
     "                    'Free Cash Flow': 'freeCashFlow',\n",
-    "                    'Free Cash Flow per Share': 'freeCashFlow',\n",
+    "                    'Free Cash Flow per Share': 'freeCashFlow / shares outstanding',\n",
     "                    'Working Capital': 'totalCurrentAssets - totalCurrentLiabilities',\n",
     "                    'Net Debt': 'netDebt'\n",
     "                    }"
@@ -647,24 +672,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "collections = [balance_sheet_collection,income_collection,cash_collection]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'generate_key_metrics' is not defined",
+     "ename": "TypeError",
+     "evalue": "must be str, not dict",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_33264\\424278894.py\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mgenerate_key_metrics\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mread_statement\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf'D:\\lianz\\Desktop\\Python\\data_science_discovery\\personal_finance\\{x}\\{\"AAPL\"}.json'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'r'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mterms_interested\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mcompany_statements\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_33264\\424278894.py\u001b[0m in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mgenerate_key_metrics\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mread_statement\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf'D:\\lianz\\Desktop\\Python\\data_science_discovery\\personal_finance\\{x}\\{\"AAPL\"}.json'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'r'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mterms_interested\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mcompany_statements\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'generate_key_metrics' is not defined"
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_45488\\1776087708.py\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mgenerate_key_metrics\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mread_statement\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf'D:\\lianz\\Desktop\\Python\\data_science_discovery\\personal_finance\\{x}\\{\"AAPL\"}.json'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'r'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mterms_interested\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mcollections\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_45488\\1776087708.py\u001b[0m in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mgenerate_key_metrics\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mread_statement\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf'D:\\lianz\\Desktop\\Python\\data_science_discovery\\personal_finance\\{x}\\{\"AAPL\"}.json'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'r'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mterms_interested\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mcollections\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_45488\\357276982.py\u001b[0m in \u001b[0;36mread_statement\u001b[1;34m(collection, ticker)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mread_statement\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcollection\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mticker\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m         \u001b[0mstatement\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mcollection\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m{\u001b[0m\u001b[1;34m'symbol'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mticker\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msort\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'date'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mDESCENDING\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mstatement\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: must be str, not dict"
      ]
     }
    ],
    "source": [
-    "pd.concat([generate_key_metrics(read_statement(f'D:\\lianz\\Desktop\\Python\\data_science_discovery\\personal_finance\\{x}\\{\"AAPL\"}.json','r'), terms_interested.values()) for x in company_statements],axis=0)"
+    "pd.concat([generate_key_metrics(read_statement(x,'A'), terms_interested.values()) for x in company_statements],axis=0).drop_duplicates()"
    ]
   },
   {
@@ -677,7 +712,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "DataScience",
    "language": "python",
    "name": "python3"
   },
@@ -691,12 +726,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "64bcc15f94cc501a51ee25093d530db16b814386d08ce749cc1f6f379d9ac3e5"
+    "hash": "15c829b79a9c192d7731c00829287f4b3b1aa9f9a3890f935442b2f4d956bef3"
    }
   }
  },
