--- a/personal_finance/investment_dashboard.ipynb
+++ b/personal_finance/investment_dashboard.ipynb
@@ -176,82 +176,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>epsdiluted</th>\n",
-       "      <th>netIncome</th>\n",
-       "      <th>revenue</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2018</th>\n",
-       "      <td>0.97</td>\n",
-       "      <td>3.160000e+08</td>\n",
-       "      <td>4.914000e+09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2019</th>\n",
-       "      <td>3.37</td>\n",
-       "      <td>1.071000e+09</td>\n",
-       "      <td>5.163000e+09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2020</th>\n",
-       "      <td>2.30</td>\n",
-       "      <td>7.190000e+08</td>\n",
-       "      <td>5.339000e+09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2021</th>\n",
-       "      <td>3.94</td>\n",
-       "      <td>1.210000e+09</td>\n",
-       "      <td>6.319000e+09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2022</th>\n",
-       "      <td>4.08</td>\n",
-       "      <td>1.254000e+09</td>\n",
-       "      <td>6.848000e+09</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      epsdiluted     netIncome       revenue\n",
-       "2018        0.97  3.160000e+08  4.914000e+09\n",
-       "2019        3.37  1.071000e+09  5.163000e+09\n",
-       "2020        2.30  7.190000e+08  5.339000e+09\n",
-       "2021        3.94  1.210000e+09  6.319000e+09\n",
-       "2022        4.08  1.254000e+09  6.848000e+09"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_20504\\4187778387.py\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0meps_df\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfrom_records\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ml\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'epsdiluted'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'netIncome'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'revenue'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0meps_df\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
     }
    ],
    "source": [
@@ -261,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,6 +210,67 @@
     "                    'Net Income Margin': 'netIncomeRatio',\n",
     "                    'Earnings per Share': 'epsdiluted',\n",
     "                    'Shares Oustanding (diluted)': 'weightedAverageShsOutDil'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(terms_interested.keys()).index('gross margin%')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['revenue', 'gross margin%', 'Operating Income']"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metric = [i for i in terms_interested.keys()][:3]\n",
+    "metric"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['revenue', 'grossProfitRatio', 'operatingIncome']"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[terms_interested[i] for i in metric]"
    ]
   },
   {
