--- a/personal_finance/json_manipulation.ipynb
+++ b/personal_finance/json_manipulation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 287,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 303,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,13 +614,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 304,
    "metadata": {},
    "outputs": [],
    "source": [
     "for i in aapl_stocksplit['historical']:\n",
     "    i['index_id'] = f\"{aapl_stocksplit['symbol']}_{i['date']}\"\n",
-    "    i['date'] = dt.datetime.strptime(i['date'], '%Y-%m-%d')"
+    "    i['date'] = dt.datetime.strptime(i['date'], '%Y-%m-%d')\n",
+    "    i['symbol'] = aapl_stocksplit['symbol']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 310,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'AAPL'"
+      ]
+     },
+     "execution_count": 310,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame.from_records([x for i,x in enumerate(historical.find({'symbol':'AAPL'}))], index='date').sort_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 308,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_id': ObjectId('6412177dd5fd146ad023d14a'), 'date': datetime.datetime(2020, 8, 31, 0, 0), 'label': 'August 31, 20', 'numerator': 4, 'denominator': 1, 'index_id': 'AAPL_2020-08-31', 'symbol': 'AAPL'}\n",
+      "{'_id': ObjectId('6412177dd5fd146ad023d14b'), 'date': datetime.datetime(2014, 6, 9, 0, 0), 'label': 'June 09, 14', 'numerator': 7, 'denominator': 1, 'index_id': 'AAPL_2014-06-09', 'symbol': 'AAPL'}\n",
+      "{'_id': ObjectId('6412177dd5fd146ad023d14c'), 'date': datetime.datetime(2005, 2, 28, 0, 0), 'label': 'February 28, 05', 'numerator': 2, 'denominator': 1, 'index_id': 'AAPL_2005-02-28', 'symbol': 'AAPL'}\n",
+      "{'_id': ObjectId('6412177dd5fd146ad023d14d'), 'date': datetime.datetime(2000, 6, 21, 0, 0), 'label': 'June 21, 00', 'numerator': 2, 'denominator': 1, 'index_id': 'AAPL_2000-06-21', 'symbol': 'AAPL'}\n",
+      "{'_id': ObjectId('6412177dd5fd146ad023d14e'), 'date': datetime.datetime(1987, 6, 16, 0, 0), 'label': 'June 16, 87', 'numerator': 2, 'denominator': 1, 'index_id': 'AAPL_1987-06-16', 'symbol': 'AAPL'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in stock_split.find({'symbol':df['symbol'][0]}):\n",
+    "    print(i)"
    ]
   },
   {
@@ -701,11 +744,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 284,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 284,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "list(set([i['index_id'] for i in historical.find()]))"
+    "# check to see if field exists\n",
+    "[i for i in historical.find({ 'symbol': { '$exists': False } })]"
    ]
   },
   {
