first working version DCF

--- a/personal_finance/json_manipulation.ipynb
+++ b/personal_finance/json_manipulation.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 301,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import json\n",
     "import requests\n",
-    "from pymongo import MongoClient\n",
+    "from pymongo import MongoClient, DESCENDING\n",
     "from bson.objectid import ObjectId\n",
     "import os\n",
     "from pprint import pprint\n",
-    "import datetime as dt"
+    "import datetime as dt\n",
+    "import numpy as np"
    ]
   },
   {
@@ -212,6 +213,248 @@
     "        f\"https://financialmodelingprep.com/api/v3/{statement}/{ticker}?limit=120&apikey=eb29218df82acef0486b5c014ccec868\")\n",
     "    r = r.json()\n",
     "    return r"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "terms_interested = {'Revenue': 'revenue',\n",
+    "                        'Gross margin%': 'grossProfitRatio',\n",
+    "                        'Operating Income': 'operatingIncome',\n",
+    "                        'Operating Margin %': 'operatingIncomeRatio',\n",
+    "                        'Net Income': 'netIncome',\n",
+    "                        'Net Income Margin': 'netIncomeRatio',\n",
+    "                        'Earnings per Share': 'epsdiluted',\n",
+    "                        'Shares Oustanding (diluted)': 'weightedAverageShsOutDil',\n",
+    "                        'Dividends': 'dividendsPaid',\n",
+    "                        'Operating Cash Flow': 'operatingCashFlow',\n",
+    "                        'Cap Spending': 'capitalExpenditure',\n",
+    "                        'Free Cash Flow': 'freeCashFlow',\n",
+    "                        'Free Cash Flow per Share': 'freeCashFlowpershare',\n",
+    "                        'Working Capital': 'totalCurrentAssets - totalCurrentLiabilities',\n",
+    "                        'Net Debt': 'netDebt'\n",
+    "                        }\n",
+    "statements_type = ['Income Statement', 'Cash Flow Statement', 'Balance Sheet']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 279,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read_statement(type_statement, ticker):\n",
+    "\n",
+    "    if type_statement == 'Income Statement':\n",
+    "        statement = [i for i in income_collection.find(\n",
+    "            {'symbol': ticker}).sort('date', DESCENDING)]\n",
+    "\n",
+    "    elif type_statement == 'Cash Flow Statement':\n",
+    "        statement = [i for i in cash_collection.find(\n",
+    "            {'symbol': ticker}).sort('date', DESCENDING)]\n",
+    "\n",
+    "    else:\n",
+    "        statement = [i for i in balance_sheet_collection.find(\n",
+    "            {'symbol': ticker}).sort('date', DESCENDING)]\n",
+    "\n",
+    "    return statement"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 291,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.concat([pd.DataFrame.from_records(read_statement(x, 'AAPL'), \n",
+    "                                          index='calendarYear', \n",
+    "                                          exclude=['_id','date','symbol','reportedCurrency','cik','fillingDate','acceptedDate','period','link','finalLink','index_id'])\n",
+    "                for x in statements_type], axis=1).T\n",
+    "df = df.loc[~df.index.duplicated(keep='first'), :].T.sort_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 312,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def project_revenue(df, past_n_years, future_n_years):\n",
+    "    projected = [df['revenue'][-1]]\n",
+    "    avg_revenue_growth = df['revenue'].pct_change()[-past_n_years:].mean()\n",
+    "    for i in range(future_n_years):\n",
+    "        projected.append(projected[i] * (1+avg_revenue_growth))\n",
+    "    \n",
+    "    return projected"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 399,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# retrieve latest treasury yield\n",
+    "def treasury(date):\n",
+    "    # date1 = dt.datetime.strftime(date - dt.timedelta(days=90), \"%Y-%m-%d\")\n",
+    "    # date2 = dt.datetime.strftime(date, \"%Y-%m-%d\")\n",
+    "    r = requests.get(\n",
+    "        f\"https://financialmodelingprep.com/api/v4/treasury?from={date}&to={date}&apikey={fmp_api}\"\n",
+    "    )\n",
+    "    r = r.json()\n",
+    "    return r"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 449,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['symbol', 'price', 'beta', 'volAvg', 'mktCap', 'lastDiv', 'range', 'changes', 'companyName', 'currency', 'cik', 'isin', 'cusip', 'exchange', 'exchangeShortName', 'industry', 'website', 'description', 'ceo', 'sector', 'country', 'fullTimeEmployees', 'phone', 'address', 'city', 'state', 'zip', 'dcfDiff', 'dcf', 'image', 'ipoDate', 'defaultImage', 'isEtf', 'isActivelyTrading', 'isAdr', 'isFund'])"
+      ]
+     },
+     "execution_count": 449,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def select_profile(ticker, statement):\n",
+    "    r = requests.get(\n",
+    "        f\"https://financialmodelingprep.com/api/v3/{statement}/{ticker}?apikey={fmp_api}\")\n",
+    "    r = r.json()\n",
+    "    return r\n",
+    "select_profile('AAPL','profile')[0].keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 443,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 443,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import math\n",
+    "maturity_date = dt.datetime.strptime(\"2027-06-30\", \"%Y-%m-%d\")\n",
+    "math.trunc((maturity_date - dt.datetime.today()).days/365)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Intrinsic Value Calculation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 445,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "forecast_years = 5\n",
+    "# Define the financials of the company\n",
+    "revenues = project_revenue(df, past_n_years=10, future_n_years=forecast_years)  # Revenue forecast for the next five years based on growth of past n=10 years\n",
+    "depreciation = df['depreciationAndAmortization'][-5:].mean()  # Depreciation as average of past n=5 years for the company\n",
+    "capital_expenditures = df['capitalExpenditure'][-5:].mean()  # Capital expenditures as average of past n=5 years for the company\n",
+    "tax_rate = (df['incomeTaxExpense'][-5:]/df['incomeBeforeTax'][-5:]).mean()  # Tax rate as average of past n=5 years for the company calculated by dividing tax expense by incomebeforetax\n",
+    "net_working_capital = (df['totalCurrentAssets'][-5:]-df['totalCurrentLiabilities'][-5:]).mean()  # Net working capital (current assets - current liabilities where current generally defines period of 12 months - assets that can be liquidated/debts that must be repayed within that time period)\n",
+    "\n",
+    "# # Define the assumptions for standard scenario\n",
+    "ebitda_margin = df['ebitdaratio'][-5:].mean()  # EBITDA margin as average of past n=5 years for the company\n",
+    "avg_gr_choices = ['revenue','epsdiluted','dividendsPaid','netIncome']\n",
+    "average_growth_rate = df[avg_gr_choices[0]].pct_change()[-10:].mean() # this can be based on revenue, net income, dividendsPaid, epsdiluted, give a choice\n",
+    "terminal_growth_rate = min(0.05, average_growth_rate) # This limits the terminal growth rate to 5% maximum\n",
+    "\n",
+    "\n",
+    "# # Define the WACC assumptions\n",
+    "risk_free_rate = treasury(dt.date.today())[0]['year5']/100 # get latest 5Y treasury yield # treasury yield (2Y, 5Y, 10Y), get realtime by querying fedAPI\n",
+    "market_return = 0.08 # assume a 8% return is desired\n",
+    "profile = select_profile('AAPL','profile')[0]\n",
+    "beta = profile['beta'] # beta of stock\n",
+    "equity = profile['mktCap'] # market cap of stock\n",
+    "debt = df['totalDebt'][-5:].mean() # total debt of company (excluding liabilities that are not debt)\n",
+    "\n",
+    "# calculate yield to maturity of company bonds\n",
+    "def ytm(coupon_rate, face_value, present_value, maturity_date: str):\n",
+    "    maturity_date = dt.datetime.strptime(maturity_date, \"%Y-%m-%d\")\n",
+    "    n_compounding_periods = math.trunc((maturity_date - dt.datetime.today()).days/365)\n",
+    "    num = coupon_rate + ((face_value - present_value)/n_compounding_periods)\n",
+    "    den = ((face_value + present_value)/2)\n",
+    "    YTM = num / den\n",
+    "    return YTM\n",
+    "\n",
+    "# wacc is the minimum rate of return that the company must earn on its investments to satisfy its investors and creditors.\n",
+    "def wacc(risk_free_rate, beta, market_return, tax_rate, equity, debt):\n",
+    "    # beta of company stock\n",
+    "    # risk free rate using 2Y,5Y,10Y treasury yield\n",
+    "    # market return = annualized % return expected if investing in this stock\n",
+    "    cost_of_equity = risk_free_rate + beta * (market_return - risk_free_rate) # estimatino based on CAPM \n",
+    "    cost_of_debt = (1 - tax_rate) * (df['interestExpense'][-5:]/df['longTermDebt'][-5:]).mean() # estimated based on weighted average of total interest expense and longterm debt\n",
+    "    # debt = sum of principal amounts of all outstanding debt securities issued by the company, including bonds, loans, and other debt instruments\n",
+    "    # equity = market cap = shares * price per share \n",
+    "    total_market_value = equity + debt \n",
+    "    weight_of_equity = equity/total_market_value\n",
+    "    weight_of_debt = debt/total_market_value\n",
+    "    wacc = weight_of_equity * cost_of_equity + weight_of_debt * cost_of_debt\n",
+    "    return wacc\n",
+    "\n",
+    "# Define a function to calculate the intrinsic value\n",
+    "def intrinsic_value(revenues, ebitda_margin, terminal_growth_rate, wacc, tax_rate, depreciation, capex, nwc, years):\n",
+    "    # Calculate the free cash flows for each year\n",
+    "    ebitda = [revenue * ebitda_margin for revenue in revenues]\n",
+    "    ebit = [ebitda[i] - depreciation for i in range(len(ebitda))]\n",
+    "    tax_paid = [-1 * tax_rate * ebit[i] for i in range(len(ebit))]\n",
+    "    net_income = [ebit[i] + tax_paid[i] for i in range(len(ebit))]\n",
+    "    free_cash_flow = [net_income[i] - capex - nwc for i in range(len(net_income))]\n",
+    "\n",
+    "    # Calculate the terminal value\n",
+    "    last_free_cash_flow = free_cash_flow[-1]\n",
+    "    terminal_value = last_free_cash_flow * (1 + terminal_growth_rate) / (wacc - terminal_growth_rate)\n",
+    "\n",
+    "    # Calculate the present value of the cash flows\n",
+    "    discount_factors = [1 / (1 + wacc) ** i for i in range(1, years+1)]\n",
+    "    pv_cash_flows = [free_cash_flow[i] * discount_factors[i] for i in range(years)]\n",
+    "    pv_terminal_value = [terminal_value * discount_factors[-1]]\n",
+    "    intrinsic_value = sum(pv_cash_flows) + sum(pv_terminal_value)\n",
+    "    return intrinsic_value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 450,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "187.8083065459422"
+      ]
+     },
+     "execution_count": 450,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "intrinsic_value(revenues, ebitda_margin, terminal_growth_rate, wacc(risk_free_rate, beta, market_return, tax_rate, equity, debt), tax_rate, depreciation, capital_expenditures, net_working_capital, forecast_years)/df['weightedAverageShsOutDil'][-1]"
    ]
   },
   {
@@ -36048,65 +36291,25 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 169,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<pymongo.command_cursor.CommandCursor at 0x1c0c2755df0>"
-      ]
-     },
-     "execution_count": 169,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "historical.aggregate([\n",
-    "    {\n",
-    "        '$set': {\n",
-    "            'open': {\n",
-    "                '$toDecimal': '$open'\n",
-    "            }, \n",
-    "            'high': {\n",
-    "                '$toDecimal': '$high'\n",
-    "            }, \n",
-    "            'low': {\n",
-    "                '$toDecimal': '$low'\n",
-    "            }, \n",
-    "            'close': {\n",
-    "                '$toDecimal': '$close'\n",
-    "            }, \n",
-    "            'volume': {\n",
-    "                '$toDecimal': '$volume'\n",
-    "            }\n",
-    "        }\n",
-    "    }\n",
-    "])"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Change price entries to decimals"
+    "##### Change price entries to double"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pymongo.results.UpdateResult at 0x1c0c7342cd0>"
+       "<pymongo.results.UpdateResult at 0x1c0c5124970>"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 177,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -36117,19 +36320,19 @@
     "    {\n",
     "        '$set': {\n",
     "            'open': {\n",
-    "                '$toDecimal': '$open'\n",
+    "                '$toDouble': '$open'\n",
     "            }, \n",
     "            'high': {\n",
-    "                '$toDecimal': '$high'\n",
+    "                '$toDouble': '$high'\n",
     "            }, \n",
     "            'low': {\n",
-    "                '$toDecimal': '$low'\n",
+    "                '$toDouble': '$low'\n",
     "            }, \n",
     "            'close': {\n",
-    "                '$toDecimal': '$close'\n",
+    "                '$toDouble': '$close'\n",
     "            }, \n",
     "            'volume': {\n",
-    "                '$toDecimal': '$volume'\n",
+    "                '$toDouble': '$volume'\n",
     "            }\n",
     "        }\n",
     "    }\n",
@@ -36159,7 +36362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -36168,7 +36371,7 @@
        "[]"
       ]
      },
-     "execution_count": 284,
+     "execution_count": 171,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -36280,7 +36483,7 @@
     "    data = r.json()\n",
     "\n",
     "    yield data\n",
-    "\n",
+    "    \n",
     "for i in get_cpi('semiannual'):\n",
     "    pprint(i)"
    ]
