--- a/personal_finance/json_manipulation.ipynb
+++ b/personal_finance/json_manipulation.ipynb
@@ -278,21 +278,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def project_revenue(df, past_n_years, future_n_years):\n",
-    "    projected = [df['revenue'][-1]]\n",
-    "    avg_revenue_growth = df['revenue'].pct_change()[-past_n_years:].mean()\n",
-    "    for i in range(future_n_years):\n",
-    "        projected.append(projected[i] * (1+avg_revenue_growth))\n",
-    "    \n",
-    "    return projected"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 399,
    "metadata": {},
    "outputs": [],
@@ -353,6 +338,48 @@
     "import math\n",
     "maturity_date = dt.datetime.strptime(\"2027-06-30\", \"%Y-%m-%d\")\n",
     "math.trunc((maturity_date - dt.datetime.today()).days/365)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 461,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def project_metric(df, metric, past_n_years, first_n_years, second_n_years, first_growth=None, second_growth=None):\n",
+    "    projected = [df[metric][-1]]\n",
+    "    if first_growth == 0:\n",
+    "        avg_growth = df[metric].pct_change()[-past_n_years:].mean()\n",
+    "        for i in range(first_n_years+second_n_years):\n",
+    "            projected.append(projected[i] * (1 + avg_growth))\n",
+    "    else:\n",
+    "        for i in range(first_n_years):\n",
+    "            projected.append(projected[i] * (1 + first_growth))\n",
+    "        for i in range(first_n_years, second_n_years + first_n_years):\n",
+    "            projected.append(projected[i] * (1 + second_growth))\n",
+    "    return projected"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 466,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "revenue = 1\n",
+    "\n",
+    "if revenue:\n",
+    "    print(revenue)\n",
+    "else:\n",
+    "    print(\"Revenue is None\")"
    ]
   },
   {
