Reformatted DCF tab

--- a/personal_finance/json_manipulation.ipynb
+++ b/personal_finance/json_manipulation.ipynb
@@ -342,6 +342,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 498,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.concat([pd.DataFrame.from_records(read_statement(x, 'AAPL'), \n",
+    "                                                index='calendarYear', \n",
+    "                                                exclude=['_id','date','symbol','reportedCurrency','cik','fillingDate','acceptedDate','period','link','finalLink','index_id']) for x in statements_type], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 506,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "36"
+      ]
+     },
+     "execution_count": 506,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(read_statement(statements_type[2], 'AMD'))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 443,
    "metadata": {},
    "outputs": [
